number of color regulation

--- a/templates/index.html
+++ b/templates/index.html
@@ -49,6 +49,7 @@ padding:50px;">
 <form  method="post" enctype="multipart/form-data">
     {{ form.hidden_tag() }}
     {{ form.file }}
+    {{form.number}}
     <input type="submit">
 </form>
     </div>
